--- a/src/static/styles/desktop_styles.css
+++ b/src/static/styles/desktop_styles.css
@@ -53,6 +53,67 @@
   }
 
   /*****************
+   About page styles
+   ****************/
+
+  .about-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 80%;
+    margin: 5% auto;
+    padding: 20px;
+    background-color: #f7f4e3;
+    border: 5px solid #f7bf3e;
+  }
+
+  .about-page p {
+    font-size: 120%;
+  }
+
+  .timeline {
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .timeline h3 {
+    text-align: center;
+    font-size: 160%;
+  }
+
+  .timeline-item {
+    display: flex;
+    margin-bottom: 30px;
+    position: relative;
+  }
+
+  /* .timeline-dot {
+  width: 15px;
+  height: 15px;
+  background-color: #000;
+  border-radius: 50%;
+  margin-right: 10px;
+} */
+
+  .timeline-date {
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 135%;
+    width: 30%;
+  }
+
+  .timeline-content {
+    max-width: 70%;
+    width: 120%;
+    font-size: 130%;
+    line-height: 120%;
+  }
+
+  .timeline-content p {
+    margin: 0;
+  }
+  /*****************
    Navbar styles
    ****************/
 
