--- a/src/static/styles/tablet_styles.css
+++ b/src/static/styles/tablet_styles.css
@@ -52,6 +52,58 @@
   }
 
   /*****************
+   About page styles
+   ****************/
+
+  .about-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 80%;
+    margin: 5% auto;
+    padding: 20px;
+    background-color: #f7f4e3;
+    border: 5px solid #f7bf3e;
+  }
+
+  .about-page p {
+    font-size: 140%;
+  }
+
+  .timeline {
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+
+  .timeline h3 {
+    text-align: center;
+    font-size: 160%;
+  }
+
+  .timeline-item {
+    display: flex;
+    margin-bottom: 30px;
+    position: relative;
+  }
+
+  .timeline-date {
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 140%;
+    width: 30%;
+  }
+
+  .timeline-content {
+    max-width: 80%;
+    font-size: 140%;
+  }
+
+  .timeline-content p {
+    margin: 0;
+  }
+
+  /*****************
    Navbar styles
    ****************/
 
@@ -61,7 +113,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 2%;
-    padding: 1% 0;
+    padding-top: 2%;
     max-width: 90%;
   }
 
